--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
     <button id="mute-btn">Mute</button>
     <button id="skip-btn">Skip Track</button>
   </div>
-  <audio id="bg-music" loop>
-    <source src="music/track1.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>
+ <audio id="bg-music" loop>
+  <source src="music/Lofi_1.wav" type="audio/wav">
+  Your browser does not support the audio element.
+</audio>
 
   <div class="legend" id="legend">
     <strong>Legend</strong><br>
