--- a/index.html
+++ b/index.html
@@ -67,15 +67,19 @@
     }
 
     #music-modal button {
-      margin-top: 5px;
-      width: 100%;
-      padding: 6px;
-      font-size: 13px;
-      border-radius: 4px;
-      border: 1px solid #888;
-      background: #f8f8f8;
-      cursor: pointer;
-    }
+  margin-top: 5px;
+  width: 100%;
+  min-width: 85px;
+  padding: 6px;
+  font-size: 13px;
+  border-radius: 4px;
+  border: 1px solid #888;
+  background: #f8f8f8;
+  cursor: pointer;
+  text-align: center;
+  box-sizing: border-box;
+}
+
   </style>
 </head>
 <body>
