--- a/index.html
+++ b/index.html
@@ -66,11 +66,10 @@
       display: none;
     }
 
-    #music-modal button {
-  margin-top: 5px;
-  width: 100%;
+ #music-modal button {
+  margin-top: 4px;
   min-width: 85px;
-  padding: 6px;
+  padding: 5px 12px; /* vertical 5px, horizontal 12px */
   font-size: 13px;
   border-radius: 4px;
   border: 1px solid #888;
@@ -79,6 +78,7 @@
   text-align: center;
   box-sizing: border-box;
 }
+
 
   </style>
 </head>
