--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
       padding: 8px;
       border-radius: 6px;
       z-index: 1003;
-      display: none;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
     }
 
  #music-modal button {
