--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
     #logout-btn { right: 130px; }
 
+    /* 🎵 Music Button */
     #music-btn {
       position: absolute;
       top: 10px;
@@ -52,6 +53,7 @@
       z-index: 1002;
     }
 
+    /* 🎵 Modal */
     #music-modal {
       position: absolute;
       top: 50px;
@@ -61,74 +63,74 @@
       padding: 8px;
       border-radius: 6px;
       z-index: 1003;
-      display: flex;
-      flex-direction: column;
-      align-items: stretch;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
     }
 
-    #music-modal button {
-      margin-top: 4px;
-      min-width: 85px;
-      padding: 5px 12px;
-      font-size: 13px;
-      border-radius: 4px;
-      border: 1px solid #888;
-      background: #f8f8f8;
-      cursor: pointer;
-      text-align: center;
-      box-sizing: border-box;
-    }
+ #music-modal button {
+  margin-top: 4px;
+  min-width: 85px;
+  padding: 5px 12px; /* vertical 5px, horizontal 12px */
+  font-size: 13px;
+  border-radius: 4px;
+  border: 1px solid #888;
+  background: #f8f8f8;
+  cursor: pointer;
+  text-align: center;
+  box-sizing: border-box;
+}
 
-    #guess-modal {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%) scale(1);
-      background: white;
-      padding: 16px;
-      border-radius: 8px;
-      border: 2px solid #333;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-      z-index: 1005;
-      display: none;
-      text-align: center;
-      animation: popupFadeIn 0.3s ease;
-    }
 
-    #guess-modal input {
-      width: 100%;
-      padding: 8px;
-      margin-bottom: 8px;
-      font-size: 16px;
-    }
-
-    #guess-modal button {
-      padding: 6px 12px;
-      font-size: 14px;
-      border-radius: 4px;
-      border: none;
-      background-color: #333;
-      color: white;
-      cursor: pointer;
-    }
-
-    @keyframes popupFadeIn {
-      from { opacity: 0; transform: translate(-50%, -60%) scale(0.95); }
-      to { opacity: 1; transform: translate(-50%, -50%) scale(1); }
-    }
-  </style>
+  #guess-modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  background: white;
+  padding: 16px;
+  border-radius: 8px;
+  border: 2px solid #333;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+  z-index: 1005;
+  display: none;
+  text-align: center;
+  animation: popupFadeIn 0.3s ease;
+  width: 260px;
+}
+#guess-modal input {
+  width: 100%;
+  padding: 8px;
+  font-size: 16px;
+  box-sizing: border-box;
+  margin-bottom: 8px;
+}
+#guess-modal button {
+  padding: 6px 12px;
+  font-size: 14px;
+  border-radius: 4px;
+  border: none;
+  background-color: #333;
+  color: white;
+  cursor: pointer;
+  margin: 4px;
+}
+@keyframes popupFadeIn {
+  from { opacity: 0; transform: translate(-50%, -60%) scale(0.95); }
+  to { opacity: 1; transform: translate(-50%, -50%) scale(1); }
+}
+</style>
 </head>
 <body>
   <div id="map"></div>
+
+  <!-- 🎵 Music Button and Modal -->
   <div id="music-btn" title="Music Settings">🎵</div>
   <div id="music-modal">
     <button id="mute-btn">Mute</button>
     <button id="skip-btn">Skip Track</button>
   </div>
-  <div id="guess-modal">
-    <input type="text" id="guess-input" placeholder="Enter road name" />
-    <button id="submit-guess">Submit</button>
-  </div>
+
   <div class="legend" id="legend">
     <strong>Legend</strong><br>
     Black: Unguessed<br>
@@ -140,7 +142,84 @@
   </div>
   <button id="login-btn">Login with Google</button>
   <button id="logout-btn">Logout</button>
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js">let currentGuessTarget = null;
+let attemptMap = new Map();
+
+function openGuessModal(targetName) {
+  currentGuessTarget = targetName;
+  document.getElementById('guess-input').value = '';
+  document.getElementById('feedback-message').innerText = '';
+  document.getElementById('guess-modal').style.display = 'block';
+  document.getElementById('guess-input').focus();
+}
+
+function closeGuessModal() {
+  document.getElementById('guess-modal').style.display = 'none';
+}
+
+function getAttempts(name) {
+  return attemptMap.get(name) || 0;
+}
+
+function incrementAttempts(name) {
+  attemptMap.set(name, getAttempts(name) + 1);
+}
+
+document.getElementById('submit-guess').onclick = handleGuess;
+document.getElementById('give-up').onclick = async () => {
+  const name = currentGuessTarget;
+  applyColorToAllSegments(name, 'orange');
+  document.getElementById('feedback-message').innerText = `Gave up! The road was: ${name}`;
+  await saveGuessSegmentIds(name, true, true);
+  setTimeout(closeGuessModal, 1200);
+};
+
+document.getElementById('guess-input').addEventListener('keydown', e => {
+  if (e.key === 'Enter') handleGuess();
+});
+
+async function handleGuess() {
+  if (!currentGuessTarget) return;
+  const input = document.getElementById('guess-input').value.trim();
+  const normalizedGuess = normalizeName(input);
+  const normalizedActual = normalizeName(currentGuessTarget);
+  const attempts = getAttempts(currentGuessTarget);
+
+  if (normalizedGuess === normalizedActual) {
+    const usedHint = attempts >= 3;
+    applyColorToAllSegments(currentGuessTarget, usedHint ? 'orange' : 'gray');
+    await saveGuessSegmentIds(currentGuessTarget, true, usedHint);
+    document.getElementById('feedback-message').innerText = '✅ Correct!';
+    setTimeout(closeGuessModal, 1000);
+    return;
+  }
+
+  if (suffixOnlyMismatch(normalizedGuess, normalizedActual)) {
+    applyColorToAllSegments(currentGuessTarget, 'yellow');
+    document.getElementById('feedback-message').innerText = 'Almost... check the suffix!';
+    return;
+  }
+
+  incrementAttempts(currentGuessTarget);
+  const newAttempts = getAttempts(currentGuessTarget);
+
+  if (newAttempts >= 4) {
+    const firstLetter = currentGuessTarget.charAt(0).toUpperCase();
+    applyColorToAllSegments(currentGuessTarget, 'orange');
+    await saveGuessSegmentIds(currentGuessTarget, true, true);
+    document.getElementById('feedback-message').innerText = `Hint used! Road begins with ${firstLetter}`;
+    setTimeout(closeGuessModal, 1500);
+    return;
+  }
+
+  if (newAttempts === 1) {
+    await saveGuessSegmentIds(currentGuessTarget, false, false);
+  }
+  applyColorToAllSegments(currentGuessTarget, 'red');
+  document.getElementById('feedback-message').innerText = '❌ Incorrect. Try again.';
+}
+</script>
   <script type="module">
 import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
 const supabase = createClient(
@@ -169,68 +248,6 @@ let nameToLayers = {};
 let guessedSegmentIds = new Set();
 let currentUserId = null;
 let segmentStateMap = new Map();
-let currentGuessTarget = null;
-let attemptMap = new Map();
-
-function openGuessModal(targetName) {
-  currentGuessTarget = targetName;
-  document.getElementById('guess-input').value = '';
-  document.getElementById('guess-modal').style.display = 'block';
-  document.getElementById('guess-input').focus();
-}
-
-function closeGuessModal() {
-  document.getElementById('guess-modal').style.display = 'none';
-}
-
-function getAttempts(name) {
-  return attemptMap.get(name) || 0;
-}
-
-function incrementAttempts(name) {
-  attemptMap.set(name, getAttempts(name) + 1);
-}
-
-document.getElementById('submit-guess').onclick = async () => {
-  if (!currentGuessTarget) return;
-  const input = document.getElementById('guess-input').value.trim();
-  const normalizedGuess = normalizeName(input);
-  const normalizedActual = normalizeName(currentGuessTarget);
-  const attempts = getAttempts(currentGuessTarget);
-
-  if (normalizedGuess === normalizedActual) {
-    const usedHint = attempts >= 3;
-    applyColorToAllSegments(currentGuessTarget, usedHint ? 'orange' : 'gray');
-    await saveGuessSegmentIds(currentGuessTarget, true, usedHint);
-    closeGuessModal();
-    alert('Correct!');
-    return;
-  }
-
-  if (suffixOnlyMismatch(normalizedGuess, normalizedActual)) {
-    applyColorToAllSegments(currentGuessTarget, 'yellow');
-    alert("Almost... check the suffix!");
-    return;
-  }
-
-  incrementAttempts(currentGuessTarget);
-  const newAttempts = getAttempts(currentGuessTarget);
-
-  if (newAttempts >= 4) {
-    const firstLetter = currentGuessTarget.charAt(0).toUpperCase();
-    alert("Hint: Road begins with " + firstLetter);
-    applyColorToAllSegments(currentGuessTarget, 'orange');
-    await saveGuessSegmentIds(currentGuessTarget, true, true);
-    closeGuessModal();
-    return;
-  }
-
-  if (newAttempts === 1) {
-    await saveGuessSegmentIds(currentGuessTarget, false, false);
-  }
-  applyColorToAllSegments(currentGuessTarget, 'red');
-  alert('Incorrect. Try again.');
-};
 
 document.getElementById('login-btn').onclick = async () => {
   const { error } = await supabase.auth.signInWithOAuth({
@@ -364,8 +381,42 @@ async function loadMap() {
             layer.setStyle({ color: 'black', weight: 6 });
           }
 
-          layer.on('click', function () {
-            openGuessModal(name);
+          let attempts = 0;
+          layer.on('click', async function () {
+            let userGuess = prompt("Guess the name of this road:");
+            if (!userGuess) return;
+
+            const normalizedGuess = normalizeName(userGuess);
+            const normalizedName = normalizeName(name);
+
+            if (normalizedGuess === normalizedName) {
+              const usedHint = attempts >= 3;
+              applyColorToAllSegments(name, usedHint ? 'orange' : 'gray');
+              await saveGuessSegmentIds(name, true, usedHint);
+              alert("Correct!");
+              return;
+            }
+
+            if (suffixOnlyMismatch(normalizedGuess, normalizedName)) {
+              applyColorToAllSegments(name, 'yellow');
+              alert("Almost... check the suffix!");
+              return;
+            }
+
+            attempts++;
+            if (attempts >= 4) {
+              const firstLetter = name.charAt(0).toUpperCase();
+              alert("Hint: Road begins with " + firstLetter);
+              applyColorToAllSegments(name, 'orange');
+              await saveGuessSegmentIds(name, true, true);
+              return;
+            }
+
+            if (attempts === 1) {
+              await saveGuessSegmentIds(name, false, false);
+            }
+            applyColorToAllSegments(name, 'red');
+            alert("Incorrect. Try again.");
           });
         }
       }).addTo(map);
@@ -378,7 +429,155 @@ L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
 }).addTo(map);
 loadMap();
 
-// Web Audio API music logic stays unchanged
-  </script>
+// 🎵 Web Audio API Seamless Loop Logic
+let audioContext = null;
+let sourceNode = null;
+let musicBuffer = null;
+let musicPlaying = false;
+let isMuted = false;
+
+const musicBtn = document.getElementById('music-btn');
+const modal = document.getElementById('music-modal');
+const muteBtn = document.getElementById('mute-btn');
+const skipBtn = document.getElementById('skip-btn');
+
+// Load audio buffer
+async function loadMusic() {
+  audioContext = new (window.AudioContext || window.webkitAudioContext)();
+  const response = await fetch('music/Lofi_1.wav');
+  const arrayBuffer = await response.arrayBuffer();
+  musicBuffer = await audioContext.decodeAudioData(arrayBuffer);
+}
+
+// Start playing loop
+function playLoop() {
+  if (!musicBuffer || isMuted) return;
+  sourceNode = audioContext.createBufferSource();
+  sourceNode.buffer = musicBuffer;
+  sourceNode.connect(audioContext.destination);
+  sourceNode.loop = true;
+  sourceNode.start(0);
+}
+
+// Stop loop
+function stopLoop() {
+  if (sourceNode) {
+    sourceNode.stop(0);
+    sourceNode.disconnect();
+    sourceNode = null;
+  }
+}
+
+musicBtn.onclick = () => {
+  modal.style.display = modal.style.display === 'block' ? 'none' : 'block';
+};
+
+muteBtn.onclick = () => {
+  isMuted = !isMuted;
+  muteBtn.innerText = isMuted ? 'Unmute' : 'Mute';
+  if (isMuted) stopLoop();
+  else playLoop();
+};
+
+skipBtn.onclick = () => {
+  stopLoop();
+  playLoop();
+};
+
+// Start audio on first interaction
+window.addEventListener('click', async () => {
+  if (!musicPlaying) {
+    await loadMusic();
+    playLoop();
+    musicPlaying = true;
+  }
+}, { once: true });
+
+  let currentGuessTarget = null;
+let attemptMap = new Map();
+
+function openGuessModal(targetName) {
+  currentGuessTarget = targetName;
+  document.getElementById('guess-input').value = '';
+  document.getElementById('feedback-message').innerText = '';
+  document.getElementById('guess-modal').style.display = 'block';
+  document.getElementById('guess-input').focus();
+}
+
+function closeGuessModal() {
+  document.getElementById('guess-modal').style.display = 'none';
+}
+
+function getAttempts(name) {
+  return attemptMap.get(name) || 0;
+}
+
+function incrementAttempts(name) {
+  attemptMap.set(name, getAttempts(name) + 1);
+}
+
+document.getElementById('submit-guess').onclick = handleGuess;
+document.getElementById('give-up').onclick = async () => {
+  const name = currentGuessTarget;
+  applyColorToAllSegments(name, 'orange');
+  document.getElementById('feedback-message').innerText = `Gave up! The road was: ${name}`;
+  await saveGuessSegmentIds(name, true, true);
+  setTimeout(closeGuessModal, 1200);
+};
+
+document.getElementById('guess-input').addEventListener('keydown', e => {
+  if (e.key === 'Enter') handleGuess();
+});
+
+async function handleGuess() {
+  if (!currentGuessTarget) return;
+  const input = document.getElementById('guess-input').value.trim();
+  const normalizedGuess = normalizeName(input);
+  const normalizedActual = normalizeName(currentGuessTarget);
+  const attempts = getAttempts(currentGuessTarget);
+
+  if (normalizedGuess === normalizedActual) {
+    const usedHint = attempts >= 3;
+    applyColorToAllSegments(currentGuessTarget, usedHint ? 'orange' : 'gray');
+    await saveGuessSegmentIds(currentGuessTarget, true, usedHint);
+    document.getElementById('feedback-message').innerText = '✅ Correct!';
+    setTimeout(closeGuessModal, 1000);
+    return;
+  }
+
+  if (suffixOnlyMismatch(normalizedGuess, normalizedActual)) {
+    applyColorToAllSegments(currentGuessTarget, 'yellow');
+    document.getElementById('feedback-message').innerText = 'Almost... check the suffix!';
+    return;
+  }
+
+  incrementAttempts(currentGuessTarget);
+  const newAttempts = getAttempts(currentGuessTarget);
+
+  if (newAttempts >= 4) {
+    const firstLetter = currentGuessTarget.charAt(0).toUpperCase();
+    applyColorToAllSegments(currentGuessTarget, 'orange');
+    await saveGuessSegmentIds(currentGuessTarget, true, true);
+    document.getElementById('feedback-message').innerText = `Hint used! Road begins with ${firstLetter}`;
+    setTimeout(closeGuessModal, 1500);
+    return;
+  }
+
+  if (newAttempts === 1) {
+    await saveGuessSegmentIds(currentGuessTarget, false, false);
+  }
+  applyColorToAllSegments(currentGuessTarget, 'red');
+  document.getElementById('feedback-message').innerText = '❌ Incorrect. Try again.';
+}
+</script>
+<!-- Guess Modal -->
+<div id="guess-modal">
+  <input type="text" id="guess-input" placeholder="Enter road name" />
+  <div>
+    <button id="submit-guess">Submit</button>
+    <button id="give-up">Give Up</button>
+  </div>
+  <div id="feedback-message" style="margin-top: 8px; font-size: 14px;"></div>
+</div>
 </body>
 </html>
